--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.1.0",
     "@mui/x-date-pickers": "^8.3.1",
+    "@nestjs/mapped-types": "*",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
